* NOT RELEASED YET * remove empty Recommends. * fix short description. * add long description. * remove empty debian/install. * please don't ship ./src/apps/*.desktop, that stuff is unmaintainable -   what about shipping links and using readlink() at runtime to determine if   the packages are installed?

--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,6 @@ Standards-Version: 3.7.2
 Package: sidux-edu
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Recommends:
-Description: sidux-edu
- ...
-
+Description: program starter and menu system for educational applications
+ generic menu system to act dynamically on installed packages and describe 
+ their uses for educational purposes
