* amarok, childsplay & tuxmath desktop files fixed * "All/Just installed programs" combobox inserted

--- a/src/apps/amarok.desktop
+++ b/src/apps/amarok.desktop
@@ -2,6 +2,7 @@
 Name=Amarok
 Icon=amarok
 Exec=amarok
+TryExec=amarok
 Package=amarok
 Type=Application
 Description=Unter Linux ein weit verbreitetes Audio Wiedergabeprogramm
