--- a/src/apps/hebcal.desktop
+++ b/src/apps/hebcal.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=hebcal
 Icon=hebcal
-Exec=hebcal
+Exec=x-terminal-emulator -e hebcal
 TryExec=hebcal
 Package=hebcal
 Description=hebcal enthält einen immerwährenden jüdischen Kalender. Hebcal ist ein Programm, das die Tage im Jüdischen Kalender für ein gegebenes gregorianisches Jahr ausdruckt. Hebcal kann flexibel die Ereignisse im Jüdischen Kalender anzeigen.
