--- a/src/apps/tuxmath.desktop
+++ b/src/apps/tuxmath.desktop
@@ -6,4 +6,4 @@ TryExec=tuxmath
 Package=tuxmath
 Description=Tuxmath ist ein Mathematiktrainer für Kinder. Das Spielprinzip ähnelt Missile Command, sprich es fallen Matheaufgaben vom Himmel und Tux muss die richtige Lösung in seinen Abwehrlaser eingeben. Sonst werden die Städte zerstört.
 Homepage=http://www.newbreedsoftware.com/tuxmath/
-Categories=Seminarix-Lernspiele
+Categories=Seminarix-Lernspiele;Seminarix-Mathematik
