--- a/src/sidux-edu.desktop
+++ b/src/sidux-edu.desktop
@@ -3,6 +3,6 @@ Encoding=UTF-8
 Type=Application
 Exec=sidux-edu
 Icon=seminarix
-Name=seminarix appstarter
-Name[de]=Seminarix Programmstarter
+Name=appstarter
+Name[de]=Programmstarter
 Categories=sidux
