--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: sidux-edu
 Section: admin
 Priority: extra
 Maintainer: Fabian Wuertz <xadras@sidux.com>
+Uploaders: Stefan Lippers-Hollmann <s.l-h@gmx.de>
 Build-Depends: cdbs, debhelper (>= 5), automake1.10, kdelibs4-dev
 Standards-Version: 3.7.2
 
