--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -698,7 +698,6 @@ install-data-local:
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
 
-
 #>+ 3
 unique.moc.cpp: $(srcdir)/unique.h
 	$(MOC) $(srcdir)/unique.h -o unique.moc.cpp
@@ -725,7 +724,7 @@ clean-metasources:
 	-rm -f  unique.moc.cpp edu.moc systray.moc.cpp
 
 #>+ 2
-KDE_DIST=Makefile.in edudialog.ui sidux-edu.desktop Makefile.am 
+KDE_DIST=Makefile.in sidux-edu.desktop edudialog.ui Makefile.am 
 
 #>+ 4
 clean-ui:
