* update to Standards-Version 3.7.3, no changes necessary. * add entry for the debian menu system.

--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,8 @@ Section: admin
 Priority: extra
 Maintainer: Fabian Wuertz <xadras@sidux.com>
 Uploaders: Stefan Lippers-Hollmann <s.l-h@gmx.de>
-Build-Depends: cdbs, debhelper (>= 5), automake1.10, kdelibs4-dev
-Standards-Version: 3.7.2
+Build-Depends: cdbs, debhelper (>= 5), automake1.10, kdelibs4-dev, imagemagick
+Standards-Version: 3.7.3
 
 Package: sidux-edu
 Architecture: any
