--- a/Makefile.in
+++ b/Makefile.in
@@ -40,7 +40,7 @@ target_triplet = @target@
 DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(srcdir)/config.h.in \
 	$(top_srcdir)/configure AUTHORS COPYING ChangeLog INSTALL NEWS \
-	TODO admin/compile admin/config.guess admin/config.sub \
+	admin/compile admin/config.guess admin/config.sub \
 	admin/depcomp admin/install-sh admin/ltmain.sh admin/missing \
 	admin/mkinstalldirs admin/ylwrap
 subdir = .
@@ -816,8 +816,30 @@ dist-hook:
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
 
+clean-bcheck: 
+	rm -f *.bchecktest.cc *.bchecktest.cc.class a.out
+
+bcheck: bcheck-recursive
+
+bcheck-am:
+	@for i in ; do \
+	    if test $(srcdir)/$$i -nt $$i.bchecktest.cc; then \
+	        echo "int main() {return 0;}" > $$i.bchecktest.cc ; \
+	        echo "#include \"$$i\"" >> $$i.bchecktest.cc ; \
+	        echo "$$i"; \
+	        if ! $(CXX) $(DEFS) -I. -I$(srcdir) -I$(top_builddir) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(CXXFLAGS) $(KDE_CXXFLAGS)  --dump-class-hierarchy -c $$i.bchecktest.cc; then \
+	            rm -f $$i.bchecktest.cc; exit 1; \
+	        fi ; \
+	        echo "" >> $$i.bchecktest.cc.class; \
+	        perl $(top_srcdir)/admin/bcheck.pl $$i.bchecktest.cc.class || { rm -f $$i.bchecktest.cc; exit 1; }; \
+	        rm -f a.out; \
+	    fi ; \
+	done
+
+
+
 #>+ 2
-KDE_DIST=stamp-h.in subdirs Makefile.in sidux_edu.kdevelop.pcs configure.files sidux_edu.kdevelop config.h.in configure.in Makefile.cvs sidux_edu.kdevses aclocal.m4 Doxyfile Makefile.am configure acinclude.m4 
+KDE_DIST=stamp-h.in subdirs Makefile.in sidux_edu.kdevelop.pcs configure.files sidux_edu.kdevelop config.h.in configure.in Makefile.cvs sidux_edu.kdevses aclocal.m4 Doxyfile configure acinclude.m4 Makefile.am 
 
 #>+ 2
 docs-am:
