--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -698,7 +698,6 @@ install-data-local:
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
 
-
 #>+ 3
 unique.moc.cpp: $(srcdir)/unique.h
 	$(MOC) $(srcdir)/unique.h -o unique.moc.cpp
@@ -725,7 +724,7 @@ clean-metasources:
 	-rm -f  unique.moc.cpp edu.moc systray.moc.cpp
 
 #>+ 2
-KDE_DIST=Makefile.in sidux-edu.desktop edudialog.ui Makefile.am 
+KDE_DIST=Makefile.in sidux-edu.desktop edudialog.h sidux-edu edudialog.ui Makefile.am 
 
 #>+ 4
 clean-ui:
@@ -774,7 +773,7 @@ bcheck-am:
 
 
 #>+ 11
-sidux_edu.all_cpp.cpp: $(srcdir)/Makefile.in $(srcdir)/edu.cpp $(srcdir)/main.cpp $(srcdir)/unique.cpp $(srcdir)/systray.cpp edudialog.cpp unique.moc.cpp systray.moc.cpp  edu.moc edudialog.moc
+sidux_edu.all_cpp.cpp: $(srcdir)/Makefile.in $(srcdir)/edu.cpp $(srcdir)/main.cpp $(srcdir)/unique.cpp $(srcdir)/systray.cpp $(srcdir)/edudialog.cpp $(srcdir)/unique.moc.cpp $(srcdir)/systray.moc.cpp  edu.moc edudialog.moc
 	@echo 'creating sidux_edu.all_cpp.cpp ...'; \
 	rm -f sidux_edu.all_cpp.files sidux_edu.all_cpp.final; \
 	echo "#define KDE_USE_FINAL 1" >> sidux_edu.all_cpp.final; \
