--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -28,6 +28,7 @@ install-data-local:
 	cp -aR $(srcdir)/categories $(DESTDIR)$(sharedir)/
 	cp -aR $(srcdir)/list $(DESTDIR)$(sharedir)/
 	cp -aR $(srcdir)/sh $(DESTDIR)$(sharedir)/
+	cp -aR $(srcdir)/html $(DESTDIR)$(sharedir)/
 
 
 # translation
