--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -689,6 +689,7 @@ install-data-local:
 	cp -aR $(srcdir)/categories $(DESTDIR)$(sharedir)/
 	cp -aR $(srcdir)/list $(DESTDIR)$(sharedir)/
 	cp -aR $(srcdir)/sh $(DESTDIR)$(sharedir)/
+	cp -aR $(srcdir)/html $(DESTDIR)$(sharedir)/
 
 # translation
 #messages: rc.cpp
@@ -724,7 +725,7 @@ clean-metasources:
 	-rm -f  unique.moc.cpp edu.moc systray.moc.cpp
 
 #>+ 2
-KDE_DIST=Makefile.in sidux-edu.desktop edudialog.ui Makefile.am 
+KDE_DIST=Makefile.in edudialog.ui sidux-edu.desktop Makefile.am 
 
 #>+ 4
 clean-ui:
