* switch from custom su-me to generic su-to-root, adapt dependencies and   menu files accordingly. * move desktop file into standard XDG hierarchy.

--- a/src/sidux-edu.desktop
+++ b/src/sidux-edu.desktop
@@ -6,4 +6,4 @@ Icon=seminarix
 Name=appstarter
 Name[de]=Programmstarter
 Name[ru]=Запуск программ образования
-Categories=sidux
+Categories=Utility;
