--- a/icons/Makefile.in
+++ b/icons/Makefile.in
@@ -484,8 +484,9 @@ uninstall-am: uninstall-kde-icons
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
 
+
 #>+ 2
-KDE_DIST=hi32-app-seminarix_empty.png hi32-app-seminarix_informatik.png hi48-app-seminarix.png Makefile.in hi32-app-seminarix_physik.png hi32-app-seminarix_allgemein.png hi32-app-seminarix_chemie.png hi32-app-seminarix_musik.png hi32-app-seminarix.png hi32-app-seminarix_kunst.png hi32-app-seminarix_mathematik.png hi32-app-seminarix_erdkunde.png hi16-app-seminarix.png hi22-app-seminarix.png hi32-app-seminarix_religion.png hi64-app-seminarix.png hi96-app-seminarix.png hi32-app-seminarix_technik.png Makefile.am hi32-app-seminarix_lernspiele.png hi32-app-seminarix_sprachen.png hi32-app-seminarix_start.png 
+KDE_DIST=hi32-app-seminarix_empty.png hi32-app-seminarix_informatik.png hi48-app-seminarix.png Makefile.in hi32-app-seminarix_physik.png hi32-app-seminarix_allgemein.png hi32-app-seminarix_chemie.png hi32-app-seminarix_musik.png hi32-app-seminarix_mathematik.png hi32-app-seminarix.png hi32-app-seminarix_kunst.png hi32-app-seminarix_erdkunde.png hi16-app-seminarix.png hi22-app-seminarix.png hi32-app-seminarix_religion.png hi64-app-seminarix.png hi96-app-seminarix.png hi32-app-seminarix_technik.png Makefile.am hi32-app-seminarix_lernspiele.png hi32-app-seminarix_sprachen.png hi32-app-seminarix_start.png 
 
 #>+ 2
 docs-am:
@@ -493,50 +494,50 @@ docs-am:
 #>+ 47
 install-kde-icons:
 	$(mkinstalldirs) $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps
+	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_allgemein.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_allgemein.png
+	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_start.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_start.png
+	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_empty.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_empty.png
+	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_erdkunde.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_erdkunde.png
+	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_lernspiele.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_lernspiele.png
+	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_informatik.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_informatik.png
+	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_sprachen.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_sprachen.png
+	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_kunst.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_kunst.png
+	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_physik.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_physik.png
 	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_religion.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_religion.png
+	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix.png
 	$(mkinstalldirs) $(DESTDIR)$(kde_icondir)/hicolor/16x16/apps
 	$(INSTALL_DATA) $(srcdir)/hi16-app-seminarix.png $(DESTDIR)$(kde_icondir)/hicolor/16x16/apps/seminarix.png
 	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_mathematik.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_mathematik.png
-	$(mkinstalldirs) $(DESTDIR)$(kde_icondir)/hicolor/22x22/apps
-	$(INSTALL_DATA) $(srcdir)/hi22-app-seminarix.png $(DESTDIR)$(kde_icondir)/hicolor/22x22/apps/seminarix.png
-	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_musik.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_musik.png
-	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_physik.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_physik.png
 	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_technik.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_technik.png
-	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_start.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_start.png
-	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_sprachen.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_sprachen.png
-	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_allgemein.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_allgemein.png
-	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_chemie.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_chemie.png
-	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_erdkunde.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_erdkunde.png
-	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_lernspiele.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_lernspiele.png
-	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_kunst.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_kunst.png
-	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_informatik.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_informatik.png
 	$(mkinstalldirs) $(DESTDIR)$(kde_icondir)/hicolor/64x64/apps
 	$(INSTALL_DATA) $(srcdir)/hi64-app-seminarix.png $(DESTDIR)$(kde_icondir)/hicolor/64x64/apps/seminarix.png
-	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix.png
 	$(mkinstalldirs) $(DESTDIR)$(kde_icondir)/hicolor/48x48/apps
 	$(INSTALL_DATA) $(srcdir)/hi48-app-seminarix.png $(DESTDIR)$(kde_icondir)/hicolor/48x48/apps/seminarix.png
-	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_empty.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_empty.png
+	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_chemie.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_chemie.png
+	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_musik.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_musik.png
+	$(mkinstalldirs) $(DESTDIR)$(kde_icondir)/hicolor/22x22/apps
+	$(INSTALL_DATA) $(srcdir)/hi22-app-seminarix.png $(DESTDIR)$(kde_icondir)/hicolor/22x22/apps/seminarix.png
 
 uninstall-kde-icons:
-	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_religion.png
-	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/16x16/apps/seminarix.png
-	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_mathematik.png
-	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/22x22/apps/seminarix.png
-	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_musik.png
-	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_physik.png
-	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_technik.png
-	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_start.png
-	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_sprachen.png
 	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_allgemein.png
-	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_chemie.png
+	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_start.png
+	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_empty.png
 	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_erdkunde.png
 	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_lernspiele.png
-	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_kunst.png
 	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_informatik.png
-	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/64x64/apps/seminarix.png
+	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_sprachen.png
+	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_kunst.png
+	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_physik.png
+	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_religion.png
 	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix.png
+	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/16x16/apps/seminarix.png
+	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_mathematik.png
+	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_technik.png
+	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/64x64/apps/seminarix.png
 	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/48x48/apps/seminarix.png
-	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_empty.png
+	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_chemie.png
+	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_musik.png
+	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/22x22/apps/seminarix.png
 
 #>+ 15
 force-reedit:
