* update to debhelper compat 6. * the desktop icon has been removed from upstream sources, ship without it.

--- a/src/sidux-edu.desktop
+++ b/src/sidux-edu.desktop
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Type=Application
 Exec=sidux-edu
-Icon=sidux-seminarix
+Icon=sidux-edu
 Name=appstarter
 Name[de]=Programmstarter
 Name[ru]=Запуск программ образования
