--- a/src/sidux-edu.desktop
+++ b/src/sidux-edu.desktop
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Type=Application
 Exec=sidux-edu
-Icon=sidux-edu
+Icon=siduxedu
 Name=appstarter
 Name[de]=Programmstarter
 Name[ru]=Запуск программ образования
