--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.7.3
 
 Package: sidux-edu
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, menu, seminarix-samples
+Depends: ${shlibs:Depends}, ${misc:Depends}, menu, seminarix-samples, konsole
 Description: program starter and menu system for educational applications
  generic menu system to act dynamically on installed packages and describe 
  their uses for educational purposes
