--- a/appdata/Makefile.in
+++ b/appdata/Makefile.in
@@ -487,7 +487,7 @@ install-data-local:
 .NOEXPORT:
 
 #>+ 2
-KDE_DIST=Makefile.am Makefile.in 
+KDE_DIST=Makefile.in Makefile.am 
 
 #>+ 2
 docs-am:
