--- a/icons/Makefile.in
+++ b/icons/Makefile.in
@@ -485,17 +485,16 @@ uninstall-am: uninstall-kde-icons  uninstall-info-am
 .NOEXPORT:
 
 #>+ 2
-KDE_DIST=hi32-app-seminarix_empty.png hi32-app-seminarix_informatik.png hi48-app-siduxedu.png hi32-app-siduxedu.png hi64-app-siduxedu.png Makefile.in hi32-app-seminarix_physik.png hi32-app-seminarix_allgemein.png hi22-app-siduxedu.png hi32-app-seminarix_chemie.png hi32-app-seminarix_musik.png hi32-app-seminarix_mathematik.png hi32-app-seminarix_kunst.png hi32-app-seminarix_erdkunde.png hi32-app-seminarix_religion.png hi16-app-siduxedu.png hi32-app-seminarix_technik.png Makefile.am hi32-app-seminarix_lernspiele.png hi96-app-siduxedu.png hi32-app-seminarix_sprachen.png hi32-app-seminarix_start.png 
+KDE_DIST=hi32-app-seminarix_informatik.png hi48-app-siduxedu.png hi32-app-siduxedu.png hi64-app-siduxedu.png Makefile.in hi32-app-seminarix_physik.png hi32-app-seminarix_allgemein.png hi22-app-siduxedu.png hi32-app-seminarix_chemie.png hi32-app-seminarix_musik.png hi32-app-seminarix_mathematik.png hi32-app-seminarix_kunst.png hi32-app-seminarix_erdkunde.png hi32-app-seminarix_religion.png hi16-app-siduxedu.png hi32-app-seminarix_technik.png Makefile.am hi32-app-seminarix_lernspiele.png hi96-app-siduxedu.png hi32-app-seminarix_sprachen.png hi32-app-seminarix_start.png 
 
 #>+ 2
 docs-am:
 
-#>+ 47
+#>+ 45
 install-kde-icons:
 	$(mkinstalldirs) $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps
 	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_allgemein.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_allgemein.png
 	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_start.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_start.png
-	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_empty.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_empty.png
 	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_erdkunde.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_erdkunde.png
 	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_lernspiele.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_lernspiele.png
 	$(INSTALL_DATA) $(srcdir)/hi32-app-seminarix_informatik.png $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_informatik.png
@@ -520,7 +519,6 @@ install-kde-icons:
 uninstall-kde-icons:
 	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_allgemein.png
 	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_start.png
-	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_empty.png
 	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_erdkunde.png
 	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_lernspiele.png
 	-rm -f $(DESTDIR)$(kde_icondir)/hicolor/32x32/apps/seminarix_informatik.png
