--- a/edu/Makefile.in
+++ b/edu/Makefile.in
@@ -367,7 +367,9 @@ sidux_edu_LDADD = $(LIB_KDEUI) ../libappinstaller/libappinstaller.la
 
 # application
 xdg_apps_DATA = sidux-edu.desktop
-sharedir = $(pkgdatadir)
+
+#sharedir = $(pkgdatadir)
+sharedir = "/usr/share"
 #>- all: all-am
 #>+ 1
 all: docs-am  all-am
@@ -712,7 +714,7 @@ clean-metasources:
 	-rm -f  edu.moc systray.moc.cpp
 
 #>+ 2
-KDE_DIST=Makefile.in sidux-edu.desktop edudialog.h edudialog.ui Makefile.am 
+KDE_DIST=Makefile.in edudialog.ui sidux-edu.desktop Makefile.am 
 
 #>+ 4
 clean-ui:
@@ -761,7 +763,7 @@ bcheck-am:
 
 
 #>+ 11
-sidux_edu.all_cpp.cpp: $(srcdir)/Makefile.in $(srcdir)/main.cpp $(srcdir)/edu.cpp $(srcdir)/systray.cpp $(srcdir)/edudialog.cpp $(srcdir)/systray.moc.cpp  edu.moc edudialog.moc
+sidux_edu.all_cpp.cpp: $(srcdir)/Makefile.in $(srcdir)/main.cpp $(srcdir)/edu.cpp $(srcdir)/systray.cpp edudialog.cpp systray.moc.cpp  edu.moc edudialog.moc
 	@echo 'creating sidux_edu.all_cpp.cpp ...'; \
 	rm -f sidux_edu.all_cpp.files sidux_edu.all_cpp.final; \
 	echo "#define KDE_USE_FINAL 1" >> sidux_edu.all_cpp.final; \
